[package]
name = "tetris-rs"
version = "0.1.0"
authors = ["blackbracken <me@bracken.black>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
ggez = "0.6.0-rc0" # ref. https://github.com/ggez/ggez/issues/646?ts=2
rand = "0.8.0"
maplit = "1.0.2"
once_cell = "1.7.2"
derive-new = "0.5.9"
num-traits = "0.2"
num-derive = "0.3"
test-case = "1.2.1"